<?xml version="1.0"?>
<package format="3">
  <name>tag_origin_publisher</name>
  <version>0.1.0</version>
  <description>Publishes the origin of an AprilTag detected via RealSense</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>pyrealsense2</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pupil-apriltags</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
